# PatentOAExeMac

./: OAScript  OAScript.spec  README.md  SomeFile.txt  documentForm.docx  drag_drop_oa.py  oa_processor.py  oa_processor.spec  pdfNowDoc  pyproject.toml
src/yoni_patent_project/: __init__.py
