[project]
name = "yoni-patent-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Eli Young", email = "eliyoung4now@gmail.com" }
]
dependencies = [
    "python-docx>=1.1.2",
    "pypdf2>=3.0.1",
    "pdfplumber>=0.11.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/yoni_patent_project"]
